--- a/Root/Index.html
+++ b/Root/Index.html
@@ -14,7 +14,7 @@
     
 
     <div class="NavigationBar">
-        <img class="NavigationIcon" src="Media/Icon.png" draggable="false">
+        <img class="NavigationIcon" src="Media/Favicon.png" draggable="false">
        UniversalUI
         <div class="NavigationMenu">
             <a class="NavigationItem" href="">Home</a>
