updates to index

--- a/Root/Index.html
+++ b/Root/Index.html
@@ -23,5 +23,71 @@
             <a class="NavigationItem" href="">GitHub</a>
         </div>
     </div>
+
+
+
+    <div class="MainContent">
+
+        N.B this page describes the targets of the project, not it's current capabilites.
+        <br>
+        <br>
+        <h2>Overview</h2>
+        
+        UniversalUI is a powerful, efficient and flexible app framework. 
+        <br>
+        <br>
+        Using a clean-slate approach, it supports multiple different design paradigms, providing an intuitive
+        and clean API that can be used for any kind of cross-platform app.
+        <br>
+        <br>
+        <h2>Supported Platforms</h2>
+        <ul>
+            <h3>Desktop</h3>
+            <li>Microsoft Windows - 7 onwards</li>
+            <li>macOS - 10.11 onwards</li>
+            <li>Linux/other - X11 & OpenGL required</li>
+
+            <h3>Mobile</h3>
+            <li>iOS & iPadOS - 10 onwards</li>
+            <li>Android - 9 onwards</li>
+
+            <h3>Web</h3>
+            <li>Browsers supporting WASM & WebGL</li>
+
+        </ul>
+        <br>
+        <br>
+        <h2>Supported Languages</h2>
+
+        
+        <ul>
+            <h3>All Platforms</h3>
+            <li>C / C++</li>
+            <li>Rust</li>
+
+            <h3>Desktop</h3>
+            <li>Python</li>
+            <li>C#</li>
+
+            <h3>Desktop & Web</h3>
+            <li>JavaScript</li>
+            <li>TypeScript</li>
+        </ul>
+        <br>
+        <br>
+        <h2>Supported paradigms</h2>
+        <ul>
+            <li>Explicit, direct layouts using constraints & manual positioning</li>
+            <li>XML descriptive layouts, with hot reloading</li>
+            <li>Graphical components alongside XML</li>
+            <li>Separate style sheets for theming</li>
+        </ul>
+
+    </div>
+
+    <div class="Footer">
+        UniversalUI, a project by Seb Hall
+
+    </div>
 </body>
 </html>
